--- a/boilerplate/js/template/navigation/NavigationView.hbs
+++ b/boilerplate/js/template/navigation/NavigationView.hbs
@@ -1,6 +1,6 @@
 <div class="navbar-inner">
     <div class="container">
-        <a class="brand" href="#">BrixJS Application</a>
+        <a class="brand" href="http://brixjs.com">BrixJS Application</a>
         <ul class="nav">
             <li class="profile active"><a href="#">Profile</a></li>
             <li class="settings"><a href="#">Settings</a></li>
