--- a/boilerplate/js/template/settings/SubSettingsView.hbs
+++ b/boilerplate/js/template/settings/SubSettingsView.hbs
@@ -10,3 +10,5 @@
         only region re-rendered is this Right Column region. Profit!
     </li>
 </ul>
+<p>And I'd like to show you how to deal with modal windows</p>
+<a href="#" class="btn btn-small">Open Modal Window</a>
